; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_usbdux.c_usbduxsub_unlink_InURBs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_usbdux.c_usbduxsub_unlink_InURBs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbduxsub = type { i32, %struct.TYPE_2__*, i64* }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [43 x i8] c"comedi: usbdux: unlinked InURB %d, err=%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usbduxsub*)* @usbduxsub_unlink_InURBs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @usbduxsub_unlink_InURBs(%struct.usbduxsub* %0) #0 {
  %2 = alloca %struct.usbduxsub*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.usbduxsub* %0, %struct.usbduxsub** %2, align 8
  store i32 0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  %5 = load %struct.usbduxsub*, %struct.usbduxsub** %2, align 8
  %6 = icmp ne %struct.usbduxsub* %5, null
  br i1 %6, label %7, label %49

7:                                                ; preds = %1
  %8 = load %struct.usbduxsub*, %struct.usbduxsub** %2, align 8
  %9 = getelementptr inbounds %struct.usbduxsub, %struct.usbduxsub* %8, i32 0, i32 2
  %10 = load i64*, i64** %9, align 8
  %11 = icmp ne i64* %10, null
  br i1 %11, label %12, label %49

12:                                               ; preds = %7
  store i32 0, i32* %3, align 4
  br label %13

13:                                               ; preds = %45, %12
  %14 = load i32, i32* %3, align 4
  %15 = load %struct.usbduxsub*, %struct.usbduxsub** %2, align 8
  %16 = getelementptr inbounds %struct.usbduxsub, %struct.usbduxsub* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = icmp slt i32 %14, %17
  br i1 %18, label %19, label %48

19:                                               ; preds = %13
  %20 = load %struct.usbduxsub*, %struct.usbduxsub** %2, align 8
  %21 = getelementptr inbounds %struct.usbduxsub, %struct.usbduxsub* %20, i32 0, i32 2
  %22 = load i64*, i64** %21, align 8
  %23 = load i32, i32* %3, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i64, i64* %22, i64 %24
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %37

28:                                               ; preds = %19
  %29 = load %struct.usbduxsub*, %struct.usbduxsub** %2, align 8
  %30 = getelementptr inbounds %struct.usbduxsub, %struct.usbduxsub* %29, i32 0, i32 2
  %31 = load i64*, i64** %30, align 8
  %32 = load i32, i32* %3, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i64, i64* %31, i64 %33
  %35 = load i64, i64* %34, align 8
  %36 = call i32 @usb_kill_urb(i64 %35)
  br label %37

37:                                               ; preds = %28, %19
  %38 = load %struct.usbduxsub*, %struct.usbduxsub** %2, align 8
  %39 = getelementptr inbounds %struct.usbduxsub, %struct.usbduxsub* %38, i32 0, i32 1
  %40 = load %struct.TYPE_2__*, %struct.TYPE_2__** %39, align 8
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 0
  %42 = load i32, i32* %3, align 4
  %43 = load i32, i32* %4, align 4
  %44 = call i32 @dev_dbg(i32* %41, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i32 %42, i32 %43)
  br label %45

45:                                               ; preds = %37
  %46 = load i32, i32* %3, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %3, align 4
  br label %13

48:                                               ; preds = %13
  br label %49

49:                                               ; preds = %48, %7, %1
  %50 = load i32, i32* %4, align 4
  ret i32 %50
}

declare dso_local i32 @usb_kill_urb(i64) #1

declare dso_local i32 @dev_dbg(i32*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
